--- a/python_scipy_optimize_brute_force_en.ipynb
+++ b/python_scipy_optimize_brute_force_en.ipynb
@@ -23,6 +23,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Import required modules"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
@@ -33,41 +40,9 @@
    "outputs": [],
    "source": [
     "%matplotlib inline\n",
-    "import numpy as np\n",
-    "import matplotlib.pyplot as plt"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Objective functions"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### 1D sphere function"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "$f(x) = x^2$"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def f1(x, *params):\n",
-    "    z = x**2\n",
-    "    print(\">\", x, z) # debug\n",
-    "    return z"
+    "\n",
+    "import matplotlib\n",
+    "matplotlib.rcParams['figure.figsize'] = (8, 8)"
    ]
   },
   {
@@ -75,30 +50,14 @@
    "execution_count": null,
    "metadata": {
     "tags": [
-     "hide_code"
+     "hide"
     ]
    },
    "outputs": [],
    "source": [
-    "x = np.arange(-3., 3., 0.05)\n",
-    "y = f1(x)\n",
-    "\n",
-    "plt.title('Objective function')\n",
-    "plt.plot(x, y,'k-');"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### ND sphere function"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "$f(x) = \\sum_i x_i^2$"
+    "# Setup PyAI\n",
+    "import sys\n",
+    "sys.path.insert(0, '/Users/jdecock/git/pub/jdhp/pyai')"
    ]
   },
   {
@@ -107,14 +66,37 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def f2(x, *params):\n",
-    "    '''ND sphere function.\n",
-    "    \n",
-    "    $x = (x_1, x_2, ...)$\n",
-    "    $f(x) = \\sum_i x_i^2 = x^T * x$'''\n",
-    "    z = np.dot(x, x)\n",
-    "    print(\">\", x, z) # debug\n",
-    "    return z"
+    "import numpy as np\n",
+    "from scipy import optimize"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Plot functions\n",
+    "from pyai.optimize.utils import plot_contour_2d_solution_space\n",
+    "from pyai.optimize.utils import plot_2d_solution_space"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Define the objective function"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Set the objective function\n",
+    "from pyai.optimize.functions import sphere1d\n",
+    "from pyai.optimize.functions import sphere2d"
    ]
   },
   {
@@ -146,20 +128,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from scipy import optimize"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "%%time\n",
     "\n",
     "search_ranges = (slice(-3., 3., 0.5),)\n",
     "\n",
-    "res = optimize.brute(f1,\n",
+    "res = optimize.brute(sphere1d,\n",
     "                     search_ranges,\n",
     "                     #args=params,\n",
     "                     full_output=True,\n",
@@ -229,7 +202,7 @@
     "\n",
     "search_ranges = (slice(-2., 3., 1.), slice(-2., 3., 1.))\n",
     "\n",
-    "res = optimize.brute(f2,\n",
+    "res = optimize.brute(sphere2d,\n",
     "                     search_ranges,\n",
     "                     #args=params,\n",
     "                     full_output=True,\n",
