Add noise on objective functions + misc improvements.

--- a/python_scipy_optimize_global_optimization_en.ipynb
+++ b/python_scipy_optimize_global_optimization_en.ipynb
@@ -127,14 +127,14 @@
     "# Set the objective function\n",
     "#from pyai.optimize.functions import sphere as func\n",
     "from pyai.optimize.functions import sphere2d as func\n",
+    "#from pyai.optimize.functions import additive_gaussian_noise as noise\n",
+    "from pyai.optimize.functions import multiplicative_gaussian_noise as noise\n",
+    "#from pyai.optimize.functions import additive_poisson_noise as noise\n",
+    "\n",
+    "func.noise = noise\n",
     "\n",
     "xmin = func.bounds[0]   # TODO\n",
-    "xmax = func.bounds[1]   # TODO\n",
-    "\n",
-    "NDIM = func.ndim\n",
-    "\n",
-    "actual_xstar = func.arg_min\n",
-    "actual_fxstar = func(actual_xstar)"
+    "xmax = func.bounds[1]   # TODO"
    ]
   },
   {
@@ -150,9 +150,9 @@
     "print(func)\n",
     "print(xmin)\n",
     "print(xmax)\n",
-    "print(NDIM)\n",
-    "print(actual_xstar)\n",
-    "print(actual_fxstar)"
+    "print(func.ndim)\n",
+    "print(func.arg_min)\n",
+    "print(func(func.arg_min))"
    ]
   },
   {
@@ -215,6 +215,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "res"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "%%time\n",
     "\n",
     "x_list = []\n",
@@ -230,7 +239,7 @@
     "        num_eval_list.append(func.num_eval)\n",
     "    print(len(x_list), x, f, accept, num_eval_list[-1])\n",
     "\n",
-    "x0 = np.random.uniform(xmin, xmax, size=NDIM)  # TODO\n",
+    "x0 = np.random.uniform(xmin, xmax, size=func.ndim)  # TODO\n",
     "\n",
     "func.do_eval_logs = True\n",
     "func.reset_eval_counters()\n",
@@ -245,10 +254,12 @@
     "                            disp=False)        # Print status messages\n",
     "\n",
     "func.do_eval_logs = False\n",
-    "eval_x_array = np.array(func.eval_logs_dict['x']).T\n",
-    "eval_error_array = np.array([func.eval_logs_dict['fx']]).T - actual_fxstar\n",
     "\n",
-    "it_error_array = np.array([fx_list]).T - actual_fxstar\n",
+    "eval_x_array = np.array(func.eval_logs_dict['x']).T\n",
+    "eval_error_array = np.array([func.eval_logs_dict['fx']]).T - func(func.arg_min)\n",
+    "\n",
+    "it_x_array = np.array(x_list).T\n",
+    "it_error_array = np.array([fx_list]).T - func(func.arg_min)\n",
     "\n",
     "print(\"x* =\", res.x)\n",
     "print(\"f(x*) =\", res.fun)\n",
@@ -264,20 +275,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "res"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "plot_contour_2d_solution_space(func,\n",
     "                               xmin=xmin,\n",
     "                               xmax=xmax,\n",
     "                               xstar=res.x,\n",
-    "                               xvisited=np.array(x_list).T,\n",
+    "                               xvisited=it_x_array,\n",
     "                               title=\"Basin-Hopping\")"
    ]
   },
@@ -417,10 +419,12 @@
     "                                      disp=False)          # Print status messages\n",
     "\n",
     "func.do_eval_logs = False\n",
-    "eval_x_array = np.array(func.eval_logs_dict['x']).T\n",
-    "eval_error_array = np.array([func.eval_logs_dict['fx']]).T - actual_fxstar\n",
     "\n",
-    "it_error_array = np.array([fx_list]).T - actual_fxstar\n",
+    "eval_x_array = np.array(func.eval_logs_dict['x']).T\n",
+    "eval_error_array = np.array([func.eval_logs_dict['fx']]).T - func(func.arg_min)\n",
+    "\n",
+    "it_x_array = np.array(x_list).T\n",
+    "it_error_array = np.array([fx_list]).T - func(func.arg_min)\n",
     "\n",
     "print(\"x* =\", res.x)\n",
     "print(\"f(x*) =\", res.fun)\n",
@@ -448,7 +452,7 @@
     "                               xmin=xmin,\n",
     "                               xmax=xmax,\n",
     "                               xstar=res.x,\n",
-    "                               xvisited=np.array(x_list).T,\n",
+    "                               xvisited=it_x_array,\n",
     "                               title=\"Differential Evolution\")"
    ]
   },
