--- a/python_scipy_optimize_brute_force_en.ipynb
+++ b/python_scipy_optimize_brute_force_en.ipynb
@@ -130,7 +130,7 @@
    "source": [
     "%%time\n",
     "\n",
-    "search_ranges = (slice(-3., 3., 0.5),)\n",
+    "search_ranges = (slice(-3., 3.5, 0.5),)\n",
     "\n",
     "res = optimize.brute(sphere1d,\n",
     "                     search_ranges,\n",
@@ -200,7 +200,7 @@
    "source": [
     "%%time\n",
     "\n",
-    "search_ranges = (slice(-2., 3., 1.), slice(-2., 3., 1.))\n",
+    "search_ranges = (slice(-2., 2.5, 0.5), slice(-2., 2.5, 0.5))\n",
     "\n",
     "res = optimize.brute(sphere2d,\n",
     "                     search_ranges,\n",
@@ -232,33 +232,62 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "tags": [
-     "hide_code"
-    ]
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "xx = res[2][0]\n",
-    "yy = res[2][1]\n",
+    "# Setup data #########################\n",
+    "\n",
+    "# Using the following 3 lines, pcolormesh won't display the last row and the last collumn...\n",
+    "\n",
+    "#xx = res[2][0]\n",
+    "#yy = res[2][1]\n",
+    "#zz = res[3]\n",
+    "\n",
+    "# Workaround to avoid pcolormesh ignoring the last row and last collumn...\n",
+    "\n",
+    "x = res[2][0][:,0]\n",
+    "y = res[2][1][0,:]\n",
+    "\n",
+    "x = np.append(x, x[-1] + x[-1] - x[-2])\n",
+    "y = np.append(y, y[-1] + y[-1] - y[-2])\n",
+    "\n",
+    "# Make the meshgrid\n",
+    "\n",
+    "xx, yy = np.meshgrid(x, y)   \n",
+    "\n",
+    "# \"Ideally the dimensions of X and Y should be one greater than those of C;\n",
+    "# if the dimensions are the same, then the last row and column of C will be ignored.\"\n",
+    "# https://stackoverflow.com/questions/44526052/can-someone-explain-this-matplotlib-pcolormesh-quirk\n",
     "zz = res[3]\n",
+    "\n",
+    "# Plot the image #####################\n",
     "\n",
     "fig, ax = plt.subplots()\n",
     "\n",
     "ax.set_title('Objective function')\n",
     "\n",
-    "# Plot the image #####################\n",
+    "# Shift to center pixels to data (workaround...)\n",
+    "# (https://stackoverflow.com/questions/43128106/pcolormesh-ticks-center-for-each-data-point-tile)\n",
+    "\n",
+    "xx -= (x[-1] - x[-2])/2.\n",
+    "yy -= (y[-1] - y[-2])/2.\n",
     "\n",
     "#im = ax.imshow(z, interpolation='bilinear', origin='lower')\n",
-    "im = ax.pcolormesh(xx, yy, zz)\n",
+    "im = ax.pcolormesh(xx, yy, zz, cmap='gnuplot2_r')\n",
     "plt.colorbar(im)              # draw the colorbar\n",
     "\n",
     "# Plot contours ######################\n",
     "\n",
-    "max_value = np.max(zz)\n",
+    "max_value = np.nanmax(zz)\n",
     "levels = np.array([0.1*max_value, 0.3*max_value, 0.6*max_value])\n",
     "\n",
-    "cs = plt.contour(xx, yy, zz, levels,\n",
+    "# Shift back pixels for contours (workaround...)\n",
+    "# (https://stackoverflow.com/questions/43128106/pcolormesh-ticks-center-for-each-data-point-tile)\n",
+    "\n",
+    "xx += (x[-1] - x[-2])/2.\n",
+    "yy += (y[-1] - y[-2])/2.\n",
+    "\n",
+    "cs = plt.contour(xx[:-1,:-1], yy[:-1,:-1], zz, levels,\n",
     "                 linewidths=(2, 2, 3), linestyles=('dotted', 'dashed', 'solid'),\n",
     "                 alpha=0.5, colors='blue')\n",
     "ax.clabel(cs, inline=False, fontsize=12)\n",
