--- a/python_scipy_optimize_global_optimization_en.ipynb
+++ b/python_scipy_optimize_global_optimization_en.ipynb
@@ -307,9 +307,9 @@
     "\n",
     "ax = ax.ravel()\n",
     "\n",
-    "plot_err_wt_iteration_number(it_error_array, ax=ax[0])\n",
-    "plot_err_wt_execution_time(it_error_array, time_list, ax=ax[1])\n",
-    "plot_err_wt_num_feval(it_error_array, num_eval_list, ax=ax[2])\n",
+    "plot_err_wt_iteration_number(it_error_array, ax=ax[0], x_log=True, y_log=True)\n",
+    "plot_err_wt_execution_time(it_error_array, time_list, ax=ax[1], x_log=True, y_log=True)\n",
+    "plot_err_wt_num_feval(it_error_array, num_eval_list, ax=ax[2], x_log=True, y_log=True)\n",
     "\n",
     "plt.tight_layout(); # Fix plot margins errors"
    ]
@@ -322,7 +322,7 @@
    "source": [
     "fig, ax = plt.subplots(nrows=1, ncols=1, squeeze=True, figsize=(8, 8))\n",
     "\n",
-    "plot_err_wt_num_feval(eval_error_array, ax=ax)"
+    "plot_err_wt_num_feval(eval_error_array, ax=ax, x_log=True, y_log=True)"
    ]
   },
   {
@@ -480,9 +480,9 @@
     "\n",
     "ax = ax.ravel()\n",
     "\n",
-    "plot_err_wt_iteration_number(it_error_array, ax=ax[0])\n",
-    "plot_err_wt_execution_time(it_error_array, time_list, ax=ax[1])\n",
-    "plot_err_wt_num_feval(it_error_array, num_eval_list, ax=ax[2])\n",
+    "plot_err_wt_iteration_number(it_error_array, ax=ax[0], x_log=True, y_log=True)\n",
+    "plot_err_wt_execution_time(it_error_array, time_list, ax=ax[1], x_log=True, y_log=True)\n",
+    "plot_err_wt_num_feval(it_error_array, num_eval_list, ax=ax[2], x_log=True, y_log=True)\n",
     "\n",
     "plt.tight_layout(); # Fix plot margins errors"
    ]
@@ -495,7 +495,7 @@
    "source": [
     "fig, ax = plt.subplots(nrows=1, ncols=1, squeeze=True, figsize=(8, 8))\n",
     "\n",
-    "plot_err_wt_num_feval(eval_error_array, ax=ax)"
+    "plot_err_wt_num_feval(eval_error_array, ax=ax, x_log=True, y_log=True)"
    ]
   },
   {
