--- a/signal_processing_fourier_transform_en.ipynb
+++ b/signal_processing_fourier_transform_en.ipynb
@@ -45,6 +45,9 @@
    },
    "source": [
     "**TODO**:\n",
+    "\n",
+    "Remplacer http://www.jdhp.org/docs/fourier_transform_intro_fr/fourier_transform_intro_fr.html\n",
+    "\n",
     "- ajouter notation simplifiée\n",
     "    - fourier-transform-introduction\n",
     "    - fourier-transform-slides\n",
@@ -227,6 +230,13 @@
    "metadata": {},
    "source": [
     "## Fourier Transform with Python"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**TODO**: ça doit être déplacé dans un notebook à part \"python_fourier_transform\" (?)"
    ]
   },
   {
