--- a/python_scipy_optimize_global_optimization_en.ipynb
+++ b/python_scipy_optimize_global_optimization_en.ipynb
@@ -77,6 +77,7 @@
    "source": [
     "import numpy as np\n",
     "import time\n",
+    "import warnings\n",
     "\n",
     "from scipy import optimize"
    ]
@@ -91,6 +92,7 @@
     "from pyai.optimize.utils import plot_contour_2d_solution_space\n",
     "from pyai.optimize.utils import plot_2d_solution_space\n",
     "\n",
+    "from pyai.optimize.utils import array_list_to_array\n",
     "from pyai.optimize.utils import plot_fx_wt_iteration_number\n",
     "from pyai.optimize.utils import plot_err_wt_iteration_number\n",
     "from pyai.optimize.utils import plot_err_wt_execution_time\n",
@@ -131,10 +133,10 @@
     "from pyai.optimize.functions import multiplicative_gaussian_noise as noise\n",
     "#from pyai.optimize.functions import additive_poisson_noise as noise\n",
     "\n",
-    "func.noise = noise\n",
+    "func.noise = noise      # Comment this line to use a deterministic objective function\n",
     "\n",
-    "xmin = func.bounds[0]   # TODO\n",
-    "xmax = func.bounds[1]   # TODO"
+    "xmin = func.bounds[0]\n",
+    "xmax = func.bounds[1]"
    ]
   },
   {
@@ -203,6 +205,15 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(res)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -215,31 +226,26 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "res"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "%%time\n",
     "\n",
-    "x_list = []\n",
-    "fx_list = []\n",
-    "time_list = []\n",
-    "num_eval_list = []\n",
+    "it_x_list = []\n",
+    "it_fx_list = []\n",
+    "it_time_list = []\n",
+    "it_num_eval_list = []\n",
     "\n",
     "def callback(x, f, accept):\n",
-    "    x_list.append(x)\n",
-    "    fx_list.append(f)\n",
-    "    time_list.append(time.time() - init_time)\n",
+    "    it_x_list.append(x)\n",
+    "    it_fx_list.append(f)\n",
+    "    it_time_list.append(time.time() - init_time)\n",
     "    if hasattr(func, 'num_eval'):\n",
-    "        num_eval_list.append(func.num_eval)\n",
-    "    print(len(x_list), x, f, accept, num_eval_list[-1])\n",
+    "        it_num_eval_list.append(func.num_eval)\n",
+    "    print(len(it_x_list), x, f, accept, it_num_eval_list[-1])\n",
     "\n",
-    "x0 = np.random.uniform(xmin, xmax, size=func.ndim)  # TODO\n",
+    "x_init = np.random.random(func.ndim)   # draw samples in [0.0, 1.0)\n",
+    "min_bounds = func.bounds[0]\n",
+    "max_bounds = func.bounds[1]\n",
+    "x_init *= (max_bounds - min_bounds)\n",
+    "x_init += min_bounds\n",
     "\n",
     "func.do_eval_logs = True\n",
     "func.reset_eval_counters()\n",
@@ -247,19 +253,24 @@
     "\n",
     "init_time = time.time()\n",
     "\n",
-    "res = optimize.basinhopping(func,\n",
-    "                            x0,                # The initial point\n",
-    "                            niter=100,         # The number of basin hopping iterations\n",
-    "                            callback=callback,\n",
-    "                            disp=False)        # Print status messages\n",
+    "with warnings.catch_warnings():\n",
+    "    warnings.simplefilter(\"ignore\")\n",
+    "    res = optimize.basinhopping(func,\n",
+    "                                x_init,            # The initial point\n",
+    "                                niter=100,         # The number of basin hopping iterations\n",
+    "                                callback=callback,\n",
+    "                                disp=False)        # Print status messages\n",
     "\n",
     "func.do_eval_logs = False\n",
     "\n",
     "eval_x_array = np.array(func.eval_logs_dict['x']).T\n",
-    "eval_error_array = np.array([func.eval_logs_dict['fx']]).T - func(func.arg_min)\n",
+    "eval_error_array = np.array(func.eval_logs_dict['fx']) - func(func.arg_min)\n",
     "\n",
-    "it_x_array = np.array(x_list).T\n",
-    "it_error_array = np.array([fx_list]).T - func(func.arg_min)\n",
+    "it_x_array = np.array(it_x_list).T\n",
+    "it_error_array = np.array(it_fx_list) - func(func.arg_min)\n",
+    "\n",
+    "it_time_array = np.array(it_time_list)\n",
+    "it_num_eval_array = np.array(it_num_eval_list)\n",
     "\n",
     "print(\"x* =\", res.x)\n",
     "print(\"f(x*) =\", res.fun)\n",
@@ -280,7 +291,7 @@
     "                               xmax=xmax,\n",
     "                               xstar=res.x,\n",
     "                               xvisited=it_x_array,\n",
-    "                               title=\"Basin-Hopping\")"
+    "                               title=\"Basin-Hopping\");"
    ]
   },
   {
@@ -294,7 +305,25 @@
     "                               xmax=xmax,\n",
     "                               xstar=res.x,\n",
     "                               xvisited=eval_x_array,\n",
-    "                               title=\"Basin-Hopping\")"
+    "                               title=\"Basin-Hopping\");"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": [
+     "hide"
+    ]
+   },
+   "outputs": [],
+   "source": [
+    "print(eval_x_array.shape)\n",
+    "print(eval_error_array.shape)\n",
+    "print(it_x_array.shape)\n",
+    "print(it_error_array.shape)\n",
+    "print(it_time_array.shape)\n",
+    "print(it_num_eval_array.shape)"
    ]
   },
   {
@@ -308,8 +337,8 @@
     "ax = ax.ravel()\n",
     "\n",
     "plot_err_wt_iteration_number(it_error_array, ax=ax[0], x_log=True, y_log=True)\n",
-    "plot_err_wt_execution_time(it_error_array, time_list, ax=ax[1], x_log=True, y_log=True)\n",
-    "plot_err_wt_num_feval(it_error_array, num_eval_list, ax=ax[2], x_log=True, y_log=True)\n",
+    "plot_err_wt_execution_time(it_error_array, it_time_array, ax=ax[1], x_log=True, y_log=True)\n",
+    "plot_err_wt_num_feval(it_error_array, it_num_eval_array, ax=ax[2], x_log=True, y_log=True)\n",
     "\n",
     "plt.tight_layout(); # Fix plot margins errors"
    ]
@@ -320,9 +349,67 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fig, ax = plt.subplots(nrows=1, ncols=1, squeeze=True, figsize=(8, 8))\n",
+    "plot_err_wt_num_feval(eval_error_array, x_log=True, y_log=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Benchmark"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%time\n",
     "\n",
-    "plot_err_wt_num_feval(eval_error_array, ax=ax, x_log=True, y_log=True)"
+    "eval_error_array_list = []\n",
+    "\n",
+    "NUM_RUNS = 100\n",
+    "\n",
+    "for run_index in range(NUM_RUNS):\n",
+    "    x_init = np.random.random(func.ndim)   # draw samples in [0.0, 1.0)\n",
+    "    min_bounds = func.bounds[0]\n",
+    "    max_bounds = func.bounds[1]\n",
+    "    x_init *= (max_bounds - min_bounds)\n",
+    "    x_init += min_bounds\n",
+    "\n",
+    "    func.do_eval_logs = True\n",
+    "    func.reset_eval_counters()\n",
+    "    func.reset_eval_logs()\n",
+    "\n",
+    "    with warnings.catch_warnings():\n",
+    "        warnings.simplefilter(\"ignore\")\n",
+    "        res = optimize.basinhopping(func,\n",
+    "                                    x_init,            # The initial point\n",
+    "                                    niter=100,         # The number of basin hopping iterations\n",
+    "                                    disp=False)        # Print status messages\n",
+    "\n",
+    "    func.do_eval_logs = False\n",
+    "\n",
+    "    eval_error_array = np.array(func.eval_logs_dict['fx']) - func(func.arg_min)\n",
+    "\n",
+    "    print(\"x* =\", res.x)\n",
+    "    print(\"f(x*) =\", res.fun)\n",
+    "    #print(\"Cause of the termination:\", \";\".join(res.message))\n",
+    "    #print(\"Number of evaluations of the objective functions:\", res.nfev)\n",
+    "    #print(\"Number of evaluations of the jacobian:\", res.njev)\n",
+    "    #print(\"Number of iterations performed by the optimizer:\", res.nit)\n",
+    "    \n",
+    "    eval_error_array_list.append(eval_error_array);"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plot_err_wt_num_feval(array_list_to_array(eval_error_array_list), x_log=True, y_log=True, plot_option=\"mean\")"
    ]
   },
   {
@@ -376,6 +463,15 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(res)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -392,18 +488,18 @@
     "\n",
     "bounds = func.bounds.T.tolist()\n",
     "\n",
-    "x_list = []\n",
-    "fx_list = []\n",
-    "time_list = []\n",
-    "num_eval_list = []\n",
+    "it_x_list = []\n",
+    "it_fx_list = []\n",
+    "it_time_list = []\n",
+    "it_num_eval_list = []\n",
     "\n",
     "def callback(xk, convergence):\n",
-    "    x_list.append(xk)\n",
-    "    fx_list.append(func(xk))\n",
-    "    time_list.append(time.time() - init_time)\n",
+    "    it_x_list.append(xk)\n",
+    "    it_fx_list.append(func(xk))\n",
+    "    it_time_list.append(time.time() - init_time)\n",
     "    if hasattr(func, 'num_eval'):\n",
-    "        num_eval_list.append(func.num_eval)\n",
-    "    print(len(x_list), xk, fx_list[-1], convergence, num_eval_list[-1])\n",
+    "        it_num_eval_list.append(func.num_eval)\n",
+    "    print(len(it_x_list), xk, it_fx_list[-1], convergence, it_num_eval_list[-1])\n",
     "\n",
     "func.do_eval_logs = True\n",
     "func.reset_eval_counters()\n",
@@ -411,20 +507,25 @@
     "\n",
     "init_time = time.time()\n",
     "\n",
-    "res = optimize.differential_evolution(func,\n",
-    "                                      bounds,              # The initial point\n",
-    "                                      maxiter=100,         # The number of DE iterations\n",
-    "                                      callback=callback,\n",
-    "                                      polish=False,\n",
-    "                                      disp=False)          # Print status messages\n",
+    "with warnings.catch_warnings():\n",
+    "    warnings.simplefilter(\"ignore\")\n",
+    "    res = optimize.differential_evolution(func,\n",
+    "                                          bounds,              # The initial point\n",
+    "                                          maxiter=100,         # The number of DE iterations\n",
+    "                                          callback=callback,\n",
+    "                                          polish=False,\n",
+    "                                          disp=False)          # Print status messages\n",
     "\n",
     "func.do_eval_logs = False\n",
     "\n",
     "eval_x_array = np.array(func.eval_logs_dict['x']).T\n",
-    "eval_error_array = np.array([func.eval_logs_dict['fx']]).T - func(func.arg_min)\n",
+    "eval_error_array = np.array(func.eval_logs_dict['fx']) - func(func.arg_min)\n",
     "\n",
-    "it_x_array = np.array(x_list).T\n",
-    "it_error_array = np.array([fx_list]).T - func(func.arg_min)\n",
+    "it_x_array = np.array(it_x_list).T\n",
+    "it_error_array = np.array(it_fx_list) - func(func.arg_min)\n",
+    "\n",
+    "it_time_array = np.array(it_time_list)\n",
+    "it_num_eval_array = np.array(it_num_eval_list)\n",
     "\n",
     "print(\"x* =\", res.x)\n",
     "print(\"f(x*) =\", res.fun)\n",
@@ -439,21 +540,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "res"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "plot_contour_2d_solution_space(func,\n",
     "                               xmin=xmin,\n",
     "                               xmax=xmax,\n",
     "                               xstar=res.x,\n",
     "                               xvisited=it_x_array,\n",
-    "                               title=\"Differential Evolution\")"
+    "                               title=\"Differential Evolution\");"
    ]
   },
   {
@@ -467,7 +559,7 @@
     "                               xmax=xmax,\n",
     "                               xstar=res.x,\n",
     "                               xvisited=eval_x_array,\n",
-    "                               title=\"Differential Evolution\")"
+    "                               title=\"Differential Evolution\");"
    ]
   },
   {
@@ -481,8 +573,8 @@
     "ax = ax.ravel()\n",
     "\n",
     "plot_err_wt_iteration_number(it_error_array, ax=ax[0], x_log=True, y_log=True)\n",
-    "plot_err_wt_execution_time(it_error_array, time_list, ax=ax[1], x_log=True, y_log=True)\n",
-    "plot_err_wt_num_feval(it_error_array, num_eval_list, ax=ax[2], x_log=True, y_log=True)\n",
+    "plot_err_wt_execution_time(it_error_array, it_time_array, ax=ax[1], x_log=True, y_log=True)\n",
+    "plot_err_wt_num_feval(it_error_array, it_num_eval_array, ax=ax[2], x_log=True, y_log=True)\n",
     "\n",
     "plt.tight_layout(); # Fix plot margins errors"
    ]
@@ -493,9 +585,64 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fig, ax = plt.subplots(nrows=1, ncols=1, squeeze=True, figsize=(8, 8))\n",
+    "plot_err_wt_num_feval(eval_error_array, x_log=True, y_log=True);"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Benchmark"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%time\n",
     "\n",
-    "plot_err_wt_num_feval(eval_error_array, ax=ax, x_log=True, y_log=True)"
+    "eval_error_array_list = []\n",
+    "\n",
+    "NUM_RUNS = 100\n",
+    "\n",
+    "for run_index in range(NUM_RUNS):\n",
+    "    bounds = func.bounds.T.tolist()\n",
+    "\n",
+    "    func.do_eval_logs = True\n",
+    "    func.reset_eval_counters()\n",
+    "    func.reset_eval_logs()\n",
+    "\n",
+    "    with warnings.catch_warnings():\n",
+    "        warnings.simplefilter(\"ignore\")\n",
+    "        res = optimize.differential_evolution(func,\n",
+    "                                              bounds,              # The initial point\n",
+    "                                              maxiter=100,         # The number of DE iterations\n",
+    "                                              polish=False,\n",
+    "                                              disp=False)          # Print status messages\n",
+    "\n",
+    "    func.do_eval_logs = False\n",
+    "\n",
+    "    eval_error_array = np.array(func.eval_logs_dict['fx']) - func(func.arg_min)\n",
+    "\n",
+    "    print(\"x* =\", res.x)\n",
+    "    print(\"f(x*) =\", res.fun)\n",
+    "    #print(\"Cause of the termination:\", \";\".join(res.message))\n",
+    "    #print(\"Number of evaluations of the objective functions:\", res.nfev)\n",
+    "    #print(\"Number of evaluations of the jacobian:\", res.njev)\n",
+    "    #print(\"Number of iterations performed by the optimizer:\", res.nit)\n",
+    "    \n",
+    "    eval_error_array_list.append(eval_error_array);"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plot_err_wt_num_feval(array_list_to_array(eval_error_array_list), x_log=True, y_log=True, plot_option=\"mean\")"
    ]
   },
   {
